<resources>
    <string name="app_name">Facebook</string>
    <string name="email">Email</string>
    <string name="emailtext">email</string>
    <string name="password">Password</string>
    <string name="passwordtext">Password</string>
    <string name="sign_in">Sign In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="todo">TODO</string>
    <string name="text">Congrat! You are Connected</string>
    <string name="sign_out">Sign Out</string>
    <string name="emailTxt">Email</string>
    <string name="passwordtxt">password</string>
</resources>