<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="signIn"
            type="com.example.facebookclone.sign.SignInViewModel" />
    </data>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign.SignInFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <TextView
           android:id="@+id/emailTxt"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginTop="16dp"
           android:layout_marginEnd="16dp"
           android:fontFamily="@font/amiri_bold"
           android:text="@string/email"
           android:textColor="#CC000000"
           android:textSize="16sp"
           app:layout_constraintBottom_toTopOf="@+id/emailInput"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.5"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintVertical_chainStyle="packed" />

       <EditText
           android:id="@+id/emailInput"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginTop="16dp"
           android:layout_marginEnd="16dp"
           android:ems="10"
           android:fontFamily="@font/roboto"
           android:hint="@string/emailtext"
           android:importantForAutofill="no"
           android:inputType="textEmailAddress"
           android:textColor="#E6000000"
           android:textSize="18sp"
           app:layout_constraintBottom_toTopOf="@+id/passwordTxt"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.5"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/emailTxt"
           tools:ignore="TouchTargetSizeCheck" />

       <TextView
           android:id="@+id/passwordTxt"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginTop="16dp"
           android:layout_marginEnd="16dp"
           android:fontFamily="@font/amiri_bold"
           android:text="@string/password"
           android:textColor="#CC000000"
           android:textSize="16sp"
           app:layout_constraintBottom_toTopOf="@+id/passwordInput"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.5"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/emailInput" />

       <EditText
           android:id="@+id/passwordInput"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginTop="16dp"
           android:layout_marginEnd="16dp"
           android:ems="10"
           android:fontFamily="@font/roboto"
           android:hint="@string/passwordtext"
           android:importantForAutofill="no"
           android:inputType="textPassword"
           android:textColor="#E6000000"
           app:layout_constraintBottom_toTopOf="@+id/buttonSignIn"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.5"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/passwordTxt"
           tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

       <Button
           android:id="@+id/buttonSignIn"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="48dp"
           android:layout_marginTop="24dp"
           android:layout_marginEnd="48dp"
           android:backgroundTint="#1565C0"
           android:fontFamily="@font/roboto"
           android:text="@string/sign_in"
           android:textAllCaps="false"
           android:textSize="20sp"
           android:onClick="@{()->signIn.onClickSignIn()}"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.5"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/passwordInput" />
   </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>